# GFVLA_CBF

./: .gitignore  README.md  requirement.txt  test_rlbench.sh  train.sh
conf/: vla.py
dualarmvla/: setup.py
dualarmvla/dualarmvla/config/: train_metaworld.yaml  train_rlbench.yaml
dualarmvla/dualarmvla/dataset/: metaworld_dataset.py  rlbench_dataset.py
dualarmvla/dualarmvla/envs/: dual_arm_env.py  metaworld_env.py  rlbench_env.py
dualarmvla/dualarmvla/helpers/: gymnasium.py  mujoco.py  pytorch.py
dualarmvla/dualarmvla/models/: __init__.py  actor.py
dualarmvla/dualarmvla/scripts/: gen_cinematic_rlbench.py  gen_data_metaworld.py  gen_data_rlbench.py  make_video_metaworld.py  sample_obs_metaworld.py  sample_obs_rlbench.py
dualarmvla/dualarmvla/tools/: gen_data_metaworld.py  gen_data_rlbench.py  make_video_metaworld.py  sample_obs_metaworld.py  sample_obs_rlbench.py  train_policy.py
dualarmvla/lift3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dualarmvla/scripts/: lift3d_example.py  train_metaworld.py  train_rlbench.py
hardware/: __init__.py  barrett_hand.py  cbf.py  config.py  demo_build_tower_3d.py  demo_build_vla_2d.py  demo_vla_tower.py  demo_vla_vla_letters.py  dual_arm_hardware.py  robotiq_gripper.py  safety.py  ur_robot_interface.py  vision.py  vla_integration.py
hardware/ros2/: CMakeLists.txt  README.md  __init__.py  demo_tower_ros2.py  demo_vla_letters_ros2.py  dual_arm_ros2_bridge.py  package.xml
hardware/ros2/launch/: demo_tower.launch.py  demo_vla_letters.launch.py  dual_arm_bridge.launch.py
models/: __init__.py  load.py  materialize.py
models/backbones/: __init__.py
models/backbones/llm/: base_llm.py  (+1 more)
models/diffusion/: models.py
models/graphs/: __init__.py  graph_encoder.py  scene_graph.py
models/vlas/: __init__.py  fisvla.py  gfvla.py
models/vlms/: prismatic.py
scripts/: sim.py  train.py
timm/models/: vision_transformer.py
training/: materialize.py
training/strategies/: base_strategy.py  fsdp.py
transformers/: cache_utils.py  modeling_outputs.py  modeling_utils.py
transformers/generation/: utils.py
util/: data_utils.py
vla/: __init__.py  materialize.py
vla/datasets/: datasets.py
(+42 files in other folders)
